...
            "value" : "Done"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Готово"
          }
        }
      }
    },
    "account.ended.generic" : {
      "extractionState" : "manual",
...
